envoy/retry-budget/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        text_format_source:
                          inline_string: |
                            [%START_TIME%] [%REQ(X-ENVOY-ATTEMPT-COUNT)%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %REQUEST_TX_DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% [%UPSTREAM [...]
                      path: /dev/stdout
                    filter:
                      extensionFilter:
                        name: envoy.access_loggers.extension_filters.cel
                        typedConfig:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.filters.cel.v3.ExpressionFilter
                          expression: response.code != 200
                route_config:
                  name: service_echo
                  virtual_hosts:
                    - name: service_echo
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/get"
                          route:
                            cluster: service_echo
                            hash_policy:
                              - query_parameter:
                                  name: "user_id"
                              - query_parameter:
                                  name: "user_org"
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_echo
                            retry_policy:
                              retry_on: 5xx
                              num_retries: 3
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service_echo
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: LEAST_REQUEST
      circuitBreakers:
        perHostThresholds:
          - maxConnections: 1
        thresholds:
          - maxConnections: 1
            maxPendingRequests: 1
            maxRequests: 1
            maxRetries: 0
            retryBudget:
              budgetPercent:
                value: 0
              minRetryConcurrency: 0
      load_assignment:
        cluster_name: service_echo
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: echo1
                      port_value: 3000
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: echo2
              #         port_value: 3000
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: echo3
              #         port_value: 3000
              # - endpoint:
              #     address:
              #       socket_address:
              #         address: echo4
              #         port_value: 3000
